# loggertodb

./: .gitignore  .isort.cfg  .travis.yml  HISTORY.rst  LICENSE.rst  README.rst  pyproject.toml  setup.py
.github/workflows/: build-exe.yml  run-tests.yml
docs/: Makefile  conf.py  development.rst  index.rst  installation.rst  license.rst  make.bat  release-notes.rst  usage.rst
loggertodb/: __init__.py  cli.py  enhydris.py  exceptions.py  meteologgerstorage.py  upgrade.py
tests/: test_cli.py  test_enhydris.py
tests/loggerstorage/: test_cr1000.py  test_deltacom.py  test_lastem.py  test_loggerstorage.py  test_multitextfileloggerstorage.py  test_odbc.py  test_pc208w.py  test_simple.py  test_textfileloggerstorage.py  test_wdat5.py
tests/loggerstorage/wdat5_data/: weatherlinkexport2pthelmats
