[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=7.1"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "loggertodb"
requires-python = ">=3.10"
dependencies = [
    "Click>=8.2,<9",
    "iso8601>=2.1,<3",
    "simpletail>=1,<2",
    "tzdata",
    "pthelma>=2,<3",
]
authors = [
    {name = "Antonis Christofides", email = "antonis@antonischristofides.com"},
]
maintainers = [
    {name = "Antonis Christofides", email = "antonis@antonischristofides.com"},
]
description = "Insert meteorological station data to Enhydris"
readme = "README.rst"
keywords = ["loggertodb"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pyfakefs"]

[project.scripts]
loggertodb = "loggertodb.cli:main"

[project.urls]
Homepage = "https://github.com/openmeteo/loggertodb"
Documentation = "https://loggertodb.readthedocs.io"
Repository = "https://github.com/openmeteo/loggertodb"
Changelog = "https://github.com/openmeteo/loggertodb/blob/master/docs/release-notes.rst"

[tool.flake8]
exclude = ["docs"]
max-line-length = 88

[tool.setuptools_scm]
write_to = "loggertodb/_version.py"

[tool.isort]
profile = "black"
skip_gitignore = true
